--- a/KrasnovK/Lab№1/Lab№1.vcxproj
+++ b/KrasnovK/Lab№1/Lab№1.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{ab02048a-ae49-40ab-a8f8-e82677a05d61}</ProjectGuid>
-    <RootNamespace>Practice11</RootNamespace>
+    <ProjectGuid>{31e42454-16d9-481b-9ffa-9cbcef7e4b9d}</ProjectGuid>
+    <RootNamespace>Lab1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
